--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "../node_modules/@biomejs/biome/bin/biome format --write './server/**/*.{js,ts,jsx,tsx}' './client/**/*.{js,ts,jsx,tsx}'"
+    "format": "npx @biomejs/biome format --write './server' './client'"
   },
   "author": "",
   "license": "ISC",
