--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7"
   }
 }
